--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ブラウザがそれぞれ持っているCSSをリセットするための記述 */
 * {
   margin: 0;
   padding: 0;
@@ -16,17 +17,18 @@ header {
   text-align: center;
 }
 
-header .heading{
+header .heading {
+  /* headerタグ内のheadingクラスにのみ反映される */
   font-size: 32px;
 }
 
-.nav-list{
+.nav-list {
   text-align: center;
   padding: 10px 0;
   margin: 0 auto;
 }
 
-.nav-list-item{
+.nav-list-item {
   list-style: none;
   display: inline-block;
   margin: 0 20px;
@@ -36,14 +38,14 @@ header .heading{
   width: 100%; /* 横幅いっぱい */
   height: 300px; /* 高さ300px */
   background-image: url(img/mv.jpg);
-  background-size: cover;
+  background-size: cover; /* 縦横比を維持したまま背景領域を埋め尽くす */
   background-position: center; /* 背景画像を中央に配置 */
 }
 
 .main-visual-content {
-  width: 40%; /* 横幅350px */
+  width: 40%; /* 横幅40% */
   height: 300px; /* 親の高さに揃える */
-  background-color: rgba( 0, 0, 0, 0.5); /* 背景色を半透明の黒にする */
+  background-color: rgba(0, 0, 0, 0.5); /* 背景色を半透明の黒にする */
   text-align: center; /* 文字を中央揃えにする */
   padding-top: 105px; /* 上側の内側余白で垂直方向の位置を調整 */
 }
@@ -57,31 +59,74 @@ header .heading{
   color: #fff; /* 文字色を白に変更 */
 }
 
-.main {
-  width: 840px; /* 横幅いっぱい */
+main {
+  width: 800px; /* 横幅800px */
   display: flex; /* Flexboxの利用 */
-  justify-content: center; /* 子要素の横並び・中央寄せ */
-  margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
+  justify-content: center; /* 要素の横並び・中央寄せ */
+  margin: 0 auto; /* 要素の中央揃え */
+  padding: 70px 0; /* 上下に70px、左右に0pxの内側余白 */
 }
 
 .blog {
-  width: 600px; /* 横幅600px */
-  height: 600px; /* 高さ600px */
+  width: 540px;
+  margin-right: 30px; /* 領域の右側余白 */
+}
+
+.blog-heading {
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height: 0.6;
+}
+
+.blog-box {
+  padding-top: 50px;
+}
+
+.blog-item {
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #f7f7f7;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.blog-image {
+  height: 180px;
+}
+
+.blog-text {
+  padding: 25px 0 0 30px;
+}
+
+.blog-text-heading {
+  padding-bottom: 15px;
+}
+
+.blog-date {
+  font-size: 12px;
+  display: inline-block;
+}
+
+.category {
+  display: inline-block;
+  padding:5px 8px;
+  background-color: #acabab;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 11px;
 }
 
 .sidebar {
-  width: 240px; /* 横幅240px */
-  height: 600px; /* 高さ600px */
-  }
-
+  width: 230px;
+}
 footer {
-  width: 100%; /* 横幅いっぱい */
-  height: 120px; /* 高さ120px */
+  width: 100%;
+  height: 120px;
   text-align: center;
   line-height: 120px;
   background-color: #848282;
 }
 
-.footer-text　{
+.footer-text {
   color: #fff;
 }
